--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       display: block;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/snarkjs@0.7.1/dist/snarkjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/snarkjs@0.6.11/build/snarkjs.min.js"></script>
 </head>
 <body>
   <div class="container">
