--- a/index.html
+++ b/index.html
@@ -164,12 +164,18 @@
       Plunge into the azure depths as an intrepid scuba diver on a quest for legendary sunken treasures. Navigate vibrant coral reefs and forgotten shipwrecks, but beware – when the currents rage and visibility drops, whispers say the mystical ruins of Atlantis itself may reveal their ancient secrets. Do you have the skill to discover them? (Hint! Only in dangerous seas!)
     </div>
     <div class="scoreboard">
-      <div>Air Supply: <span id="air"></span> bar</div>
-      <div>Total Score: <span id="score"></span></div>
+      <div>
+        <div style="margin-bottom: 8px;">Air Supply: <span id="air"></span> bar</div>
+        <div>Dive Status: <span id="dive-status"></span></div>
+      </div>
+      <div>
+        <div style="margin-bottom: 8px;">Total Score: <span id="score"></span></div>
+        <div>Current Haul: <span id="haul"></span></div>
+      </div>
     </div>
-    <div class="scoreboard">
-      <div>Current Haul: <span id="haul"></span></div>
-      <div>Dive Status: <span id="dive-status"></span></div>
+    <div class="scoreboard" style="margin-top: 12px;">
+      <div></div>
+      <div>🦈 Sharks Encountered: <span id="sharks">0</span></div>
     </div>
     <div class="reset-btn-row"><button id="reset-game-btn">Reset Game</button></div>
     <div style="margin-bottom: 2px;">
