--- a/index.html
+++ b/index.html
@@ -163,19 +163,36 @@
     <div class="description">
       Plunge into the azure depths as an intrepid scuba diver on a quest for legendary sunken treasures. Navigate vibrant coral reefs and forgotten shipwrecks, but beware – when the currents rage and visibility drops, whispers say the mystical ruins of Atlantis itself may reveal their ancient secrets. Do you have the skill to discover them? (Hint! Only in dangerous seas!)
     </div>
-    <div class="scoreboard">
+    <div class="scoreboard" style="margin-bottom: 20px;">
       <div>
-        <div style="margin-bottom: 8px;">Air Supply: <span id="air"></span> bar</div>
+        <div style="margin-bottom: 12px;">Air Supply: <span id="air"></span> bar</div>
         <div>Dive Status: <span id="dive-status"></span></div>
       </div>
       <div>
-        <div style="margin-bottom: 8px;">Total Score: <span id="score"></span></div>
+        <div style="margin-bottom: 12px;">Total Score: <span id="score"></span></div>
         <div>Current Haul: <span id="haul"></span></div>
       </div>
     </div>
-    <div class="scoreboard" style="margin-top: 12px;">
-      <div></div>
-      <div>🦈 Sharks Encountered: <span id="sharks">0</span></div>
+    <div class="scoreboard" style="margin-bottom: 24px;">
+      <div>
+        <div>🦈 Sharks Encountered: <span id="sharks">0</span></div>
+      </div>
+    </div>
+    <div style="margin-bottom: 24px; padding: 16px; background: #f5f5f5; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+      <div style="font-weight: bold; margin-bottom: 12px; color: #005580; font-size: 1.1em;">Tools:</div>
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
+        <div style="flex: 1; margin-right: 20px;">
+          <div style="margin-bottom: 4px;">🛡️ Shark Repellent: <span id="repellents">0</span></div>
+          <div style="font-size: 0.9em; color: #666;">(Automatically saves you from one shark attack)</div>
+        </div>
+        <div style="flex: 1;">
+          <div style="margin-bottom: 4px;">🔍 Metal Detector: <span id="detectors">0</span></div>
+          <div style="font-size: 0.9em; color: #666;">(Boosts treasure chances for one dive)</div>
+        </div>
+      </div>
+      <div style="text-align: right;">
+        <button id="use-detector" style="padding: 6px 12px; font-size: 0.95em; background: #e0f7fa; border: 1px solid #b3e0ff; border-radius: 4px; cursor: pointer;" title="Use Metal Detector to increase treasure chances for your next dive">Use Metal Detector</button>
+      </div>
     </div>
     <div class="reset-btn-row"><button id="reset-game-btn">Reset Game</button></div>
     <div style="margin-bottom: 2px;">
