--- a/index.html
+++ b/index.html
@@ -160,13 +160,103 @@
 <body>
   <div class="container">
     <h1>Dive for Atlantis 🤿</h1>
-    <div class="description">
+    <div class="scoreboard">
+    </div>
+    <div class="game-description" style="margin-bottom: 32px;">
       Plunge into the azure depths as an intrepid scuba diver on a quest for legendary sunken treasures. Navigate vibrant coral reefs and forgotten shipwrecks, but beware – when the currents rage and visibility drops, whispers say the mystical ruins of Atlantis itself may reveal their ancient secrets. Do you have the skill to discover them? (Hint! Only in dangerous seas!)
     </div>
+
+    <div style="margin-bottom: 24px; padding: 16px; background: #f0f8ff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+      <div style="font-weight: bold; color: #005580; font-size: 1.1em; margin-bottom: 12px;">Get Started</div>
+      <div style="font-size: 0.95em; color: #174a5a; line-height: 1.5;">
+        1. You start with $300 and can buy various items from the Dive Shop.<br>
+        2. You may choose when you want to use the items, except for the automatic Shark Repellent.<br>
+        3. You have to buy 1 Air Tank and Use it before you start your dive. After you click Use, you will see 200 bar in your Air Supply.<br>
+        4. Dive as long and as much as you can to haul as many treasures back to increase your wallet.<br>
+        5. If you run out of air, you will die and lose all your treasures.<br>
+        6. If you run out of money, you will lose the game.<br>
+      </div>
+    </div>
+
+    <div class="reset-btn-row" style="margin-bottom: 24px;"><button id="reset-game-btn">Reset Game</button></div>
+
+    <!-- Combined Inventory Section -->
+    <div style="margin-bottom: 24px; padding: 16px; background: #f0f8ff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
+        <div style="font-weight: bold; color: #005580; font-size: 1.1em;">Dive Shop</div>
+        <div style="font-weight: bold; color: #005580; font-size: 1.1em;">You Have: $<span id="money">200</span></div>
+      </div>
+      <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px;">
+        <div style="padding: 12px; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+          <div style="font-weight: bold; margin-bottom: 4px; display: flex; justify-content: space-between;">
+            <span>💨 Standard Air Tank</span>
+            <span style="color: #005580; font-weight: bold;">$80</span>
+          </div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Provides 200 air for one full expedition</div>
+          <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
+            <div>
+              <span style="margin-left: 8px; color: #666;">Owned: <span id="air-tank-count">0</span></span>
+            </div>
+            <div>
+              <button onclick="buyItem('AIR_TANK')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
+              <button id="use-air-tank" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;" title="Use Air Tank to start your dive">Use</button>
+            </div>
+          </div>
+        </div>
+        <div style="padding: 12px; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+          <div style="font-weight: bold; margin-bottom: 4px; display: flex; justify-content: space-between;">
+            <span>🛡️ Shark Repellent</span>
+            <span style="color: #005580; font-weight: bold;">$150</span>
+          </div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Automatically saves you from one Shark Encounter</div>
+          <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
+            <div>
+              <span style="margin-left: 8px; color: #666;">Owned: <span id="repellents">0</span></span>
+            </div>
+            <div>
+              <button onclick="buyItem('SHARK_REPELLENT')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div style="padding: 12px; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+          <div style="font-weight: bold; margin-bottom: 4px; display: flex; justify-content: space-between;">
+            <span>⚙️ Metal Detector</span>
+            <span style="color: #005580; font-weight: bold;">$100</span>
+          </div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Greatly increases treasure odds for your next dive</div>
+          <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
+            <div>
+              <span style="margin-left: 8px; color: #666;">Owned: <span id="detectors">0</span></span>
+            </div>
+            <div>
+              <button onclick="buyItem('METAL_DETECTOR')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
+              <button id="use-detector" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;" title="Use Metal Detector to increase treasure chances for your next dive">Use</button>
+            </div>
+          </div>
+        </div>
+        <div style="padding: 12px; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+          <div style="font-weight: bold; margin-bottom: 4px; display: flex; justify-content: space-between;">
+            <span>📡 Sonar Ping</span>
+            <span style="color: #005580; font-weight: bold;">$50</span>
+          </div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Reveals the category of the next event</div>
+          <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
+            <div>
+              <span style="margin-left: 8px; color: #666;">Owned: <span id="sonar-pings">0</span></span>
+            </div>
+            <div>
+              <button onclick="buyItem('SONAR_PING')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
+              <button id="use-sonar" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;" title="Use Sonar Ping to reveal the next event category">Use</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="scoreboard" style="margin-bottom: 20px;">
       <div>
-        <div style="margin-bottom: 12px;">Air Supply: <span id="air"></span> bar</div>
-        <div>Dive Status: <span id="dive-status"></span></div>
+        <div style="margin-bottom: 12px;">Dive Status: <span id="dive-status"></span></div>
+        <div>Air Supply: <span id="air"></span> bar</div>
       </div>
       <div>
         <div style="margin-bottom: 12px;">Total Score: <span id="score"></span></div>
@@ -178,23 +268,7 @@
         <div>🦈 Sharks Encountered: <span id="sharks">0</span></div>
       </div>
     </div>
-    <div style="margin-bottom: 24px; padding: 16px; background: #f5f5f5; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
-      <div style="font-weight: bold; margin-bottom: 12px; color: #005580; font-size: 1.1em;">Tools:</div>
-      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
-        <div style="flex: 1; margin-right: 20px;">
-          <div style="margin-bottom: 4px;">🛡️ Shark Repellent: <span id="repellents">0</span></div>
-          <div style="font-size: 0.9em; color: #666;">(Automatically saves you from one shark attack)</div>
-        </div>
-        <div style="flex: 1;">
-          <div style="margin-bottom: 4px;">🔍 Metal Detector: <span id="detectors">0</span></div>
-          <div style="font-size: 0.9em; color: #666;">(Boosts treasure chances for one dive)</div>
-        </div>
-      </div>
-      <div style="text-align: right;">
-        <button id="use-detector" style="padding: 6px 12px; font-size: 0.95em; background: #e0f7fa; border: 1px solid #b3e0ff; border-radius: 4px; cursor: pointer;" title="Use Metal Detector to increase treasure chances for your next dive">Use Metal Detector</button>
-      </div>
-    </div>
-    <div class="reset-btn-row"><button id="reset-game-btn">Reset Game</button></div>
+
     <div style="margin-bottom: 2px;">
       <span id="current-status-emoji"></span> <span id="current-status-text"></span>
     </div>
