--- a/index.html
+++ b/index.html
@@ -171,10 +171,9 @@
       <div style="font-size: 0.95em; color: #174a5a; line-height: 1.5;">
         1. You start with $300 and can buy various items from the Dive Shop.<br>
         2. You may choose when you want to use the items, except for the automatic Shark Repellent.<br>
-        3. You have to buy 1 Air Tank and Use it before you start your dive. After you click Use, you will see 200 bar in your Air Supply.<br>
-        4. Dive as long and as much as you can to haul as many treasures back to increase your wallet.<br>
-        5. If you run out of air, you will die and lose all your treasures.<br>
-        6. If you run out of money, you will lose the game.<br>
+        3. Dive as long and as much as you can to haul as many treasures back to increase your wallet.<br>
+        4. If you run out of air, you will die and lose all your treasures.<br>
+        5. If you run out of money, you will lose the game.<br>
       </div>
     </div>
 
@@ -192,7 +191,7 @@
             <span>💨 Standard Air Tank</span>
             <span style="color: #005580; font-weight: bold;">$80</span>
           </div>
-          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Provides 200 air for one full expedition</div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Provides 200 bar for one full expedition. Can only be used at the surface.</div>
           <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
             <div>
               <span style="margin-left: 8px; color: #666;">Owned: <span id="air-tank-count">0</span></span>
@@ -208,7 +207,7 @@
             <span>🛡️ Shark Repellent</span>
             <span style="color: #005580; font-weight: bold;">$150</span>
           </div>
-          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Automatically saves you from one Shark Encounter</div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Automatically saves you from one Shark Encounter.</div>
           <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
             <div>
               <span style="margin-left: 8px; color: #666;">Owned: <span id="repellents">0</span></span>
@@ -223,7 +222,7 @@
             <span>⚙️ Metal Detector</span>
             <span style="color: #005580; font-weight: bold;">$100</span>
           </div>
-          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Greatly increases treasure odds for your next dive</div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Greatly increases treasure odds for your next dive.</div>
           <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
             <div>
               <span style="margin-left: 8px; color: #666;">Owned: <span id="detectors">0</span></span>
@@ -239,7 +238,7 @@
             <span>📡 Sonar Ping</span>
             <span style="color: #005580; font-weight: bold;">$50</span>
           </div>
-          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Reveals the category of the next event</div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Sends a sonic pulse into the murky depths to glimpse what lies ahead.</div>
           <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
             <div>
               <span style="margin-left: 8px; color: #666;">Owned: <span id="sonar-pings">0</span></span>
