--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     h1 {
       text-align: center;
       color: #005580;
-      margin-bottom: 22px;
+      margin-bottom: 12px;
     }
     .scoreboard {
       display: flex;
@@ -162,14 +162,14 @@
     <h1>Dive for Atlantis 🤿</h1>
     <div class="scoreboard">
     </div>
-    <div class="game-description" style="margin-bottom: 32px;">
+    <div class="game-description" style="margin-top: 0; margin-bottom: 32px;">
       Plunge into the azure depths as an intrepid scuba diver on a quest for legendary sunken treasures. Navigate vibrant coral reefs and forgotten shipwrecks, but beware – when the currents rage and visibility drops, whispers say the mystical ruins of Atlantis itself may reveal their ancient secrets. Do you have the skill to discover them? (Hint! Only in dangerous seas!)
     </div>
 
     <div style="margin-bottom: 24px; padding: 16px; background: #f0f8ff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
       <div style="font-weight: bold; color: #005580; font-size: 1.1em; margin-bottom: 12px;">Get Started</div>
       <div style="font-size: 0.95em; color: #174a5a; line-height: 1.5;">
-        1. You start with $300 and can buy various items from the Dive Shop.<br>
+        1. You start with $200 and can buy various items from the Dive Shop.<br>
         2. You may choose when you want to use the items, except for the automatic Shark Repellent.<br>
         3. Dive as long and as much as you can to haul as many treasures back to increase your wallet.<br>
         4. If you run out of air, you will die and lose all your treasures.<br>
@@ -191,7 +191,7 @@
             <span>💨 Standard Air Tank</span>
             <span style="color: #005580; font-weight: bold;">$80</span>
           </div>
-          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Provides 200 bar for one full expedition. Can only be used at the surface.</div>
+          <div style="font-size: 0.9em; color: #666; margin-bottom: 8px;">Provides 200 bar for one full dive expedition. Can only be used at the surface.</div>
           <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
             <div>
               <span style="margin-left: 8px; color: #666;">Owned: <span id="air-tank-count">0</span></span>
