--- a/index.html
+++ b/index.html
@@ -283,8 +283,11 @@
     <div class="log" id="log"><span id="log-emoji"></span> <span id="log-text"></span></div>
     <div class="gameover" id="gameover"></div>
     <button id="zk-proof-btn" style="display:none; width:100%; margin-bottom:18px;">Generate ZK Proof</button>
+    <button id="decode-proof-btn" class="action-button" style="display: none; background-color: #28a745; margin-top: 10px;">Decode Proof</button>
+<pre id="decoded-proof-output" style="display: none;"></pre>
     <pre id="zk-proof-output" style="font-size:0.9em; background:#f8f8f8; border-radius:8px; padding:10px; overflow-x:auto; display:none;"></pre>
     <div class="bigscore" id="bigscore"></div>
+    
     <div class="footer">&copy; 2025 Dive for Atlantis</div>
   </div>
   <script src="game.js"></script>
