--- a/index.html
+++ b/index.html
@@ -154,6 +154,24 @@
       box-shadow: 0 4px 16px rgba(0,0,0,0.18);
       display: block;
     }
+    .event-image-container {
+      width: 100%;
+      height: 260px;
+      margin: 18px 0;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+      display: none;
+    }
+    .event-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.3s ease;
+    }
+    .event-image:hover {
+      transform: scale(1.05);
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/snarkjs@0.6.11/build/snarkjs.min.js"></script>
 </head>
@@ -197,7 +215,7 @@
               <span style="margin-left: 8px; color: #666;">Owned: <span id="air-tank-count">0</span></span>
             </div>
             <div>
-              <button onclick="buyItem('AIR_TANK')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
+              <button data-item-type="AIR_TANK" class="buy-item-btn" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
               <button id="use-air-tank" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;" title="Use Air Tank to start your dive">Use</button>
             </div>
           </div>
@@ -213,7 +231,7 @@
               <span style="margin-left: 8px; color: #666;">Owned: <span id="repellents">0</span></span>
             </div>
             <div>
-              <button onclick="buyItem('SHARK_REPELLENT')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;">Buy</button>
+              <button data-item-type="SHARK_REPELLENT" class="buy-item-btn" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;">Buy</button>
             </div>
           </div>
         </div>
@@ -228,7 +246,7 @@
               <span style="margin-left: 8px; color: #666;">Owned: <span id="detectors">0</span></span>
             </div>
             <div>
-              <button onclick="buyItem('METAL_DETECTOR')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
+              <button data-item-type="METAL_DETECTOR" class="buy-item-btn" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
               <button id="use-detector" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;" title="Use Metal Detector to increase treasure chances for your next dive">Use</button>
             </div>
           </div>
@@ -244,7 +262,7 @@
               <span style="margin-left: 8px; color: #666;">Owned: <span id="sonar-pings">0</span></span>
             </div>
             <div>
-              <button onclick="buyItem('SONAR_PING')" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
+              <button data-item-type="SONAR_PING" class="buy-item-btn" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer; margin-right: 8px;">Buy</button>
               <button id="use-sonar" style="padding: 4px 8px; font-size: 0.9em; background: #0099cc; color: white; border: none; border-radius: 4px; cursor: pointer;" title="Use Sonar Ping to reveal the next event category">Use</button>
             </div>
           </div>
@@ -256,6 +274,7 @@
       <div>
         <div style="margin-bottom: 12px;">Dive Status: <span id="dive-status"></span></div>
         <div>Air Supply: <span id="air"></span> bar</div>
+        <div>Current Depth: <span id="depth">0</span> metres | <span id="depth-feet">0</span> feet</div>
       </div>
       <div>
         <div style="margin-bottom: 12px;">Total Score: <span id="score"></span></div>
@@ -275,12 +294,15 @@
     <div class="status" id="current-status">
       <img id="shark-img" class="status-img" src="https://images.unsplash.com/photo-1560275619-5a040af74ede?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Shark Encounter" style="display:none;" />
     </div>
+    <div class="event-image-container" id="event-image-container">
+      <img class="event-image" id="event-image" src="" alt="Event Image">
+    </div>
+    <div class="log" id="log"><span id="log-emoji"></span> <span id="log-text"></span></div>
     <div class="actions">
       <button id="start-dive">Start Dive</button>
       <button id="dive-deeper">Dive Deeper</button>
       <button id="surface">Surface Safely</button>
     </div>
-    <div class="log" id="log"><span id="log-emoji"></span> <span id="log-text"></span></div>
     <div class="gameover" id="gameover"></div>
     <button id="zk-proof-btn" style="display:none; width:100%; margin-bottom:18px;">Generate ZK Proof</button>
     <button id="decode-proof-btn" class="action-button" style="display: none; background-color: #28a745; margin-top: 10px;">Decode Proof</button>
@@ -290,6 +312,7 @@
     
     <div class="footer">&copy; 2025 Dive for Atlantis</div>
   </div>
+  <script src="items.js"></script>
   <script src="game.js"></script>
   <script>
     if (!window.snarkjs || !window.snarkjs.groth16) {
