--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="scoreboard">
     </div>
     <div class="game-description" style="margin-top: 0; margin-bottom: 32px;">
-      Plunge into the azure depths as an intrepid scuba diver on a quest for legendary sunken treasures. Navigate vibrant coral reefs and forgotten shipwrecks, but beware – when the currents rage and visibility drops, whispers say the mystical ruins of Atlantis itself may reveal their ancient secrets. Do you have the skill to discover them? (Hint! Only in dangerous seas!)
+      Plunge into the azure depths as an intrepid scuba diver on a quest for legendary sunken treasures of Atlantis. Navigate vibrant coral reefs and forgotten shipwrecks, but beware – when the currents rage and visibility drops, whispers say the mystical ruins of Atlantis itself may reveal their ancient secrets. Do you have the skill to discover them?
     </div>
 
     <div style="margin-bottom: 24px; padding: 16px; background: #f0f8ff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
@@ -190,8 +190,9 @@
         1. You start with $200 and can buy various items from the Dive Shop.<br>
         2. You may choose when you want to use the items, except for the automatic Shark Repellent.<br>
         3. Dive as long and as much as you can to haul as many treasures back to increase your wallet.<br>
-        4. If you run out of air, you will die and lose all your treasures.<br>
-        5. If you run out of money, you will lose the game.<br>
+        4. Surface to bank your haul, refill your air tank, and buy more items.<br>
+        5. If you run out of air, you will die and lose all your treasures.<br>
+        6. If you run out of money, you will lose the game.<br>
       </div>
     </div>
 
